# diff-color

./: Cargo.toml  README.md  README.tpl
src/: lib.rs  main.rs
